test/conformance/chainsaw/mutate/e2e/patchesjson6902-simple/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-image-as-env-var
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
