test/conformance/chainsaw/mutate/e2e/patchesjson6902-simple/resource-mutated.yaml
apiVersion: v1
kind: Pod
metadata:
  name: foo-patchesjson6902-simple
  namespace: default
spec:
  containers:
  - command:
    - sleep infinity
    env:
    - name: FOO
      value: bar
    - name: K8S_IMAGE
      value: public.ecr.aws/docker/library/busybox:1.11
    image: public.ecr.aws/docker/library/busybox:1.11
    name: busybox
    securityContext:
      capabilities:
        drop:
        - SETUID
  initContainers:
  - command:
    - sleep infinity
    image: nginx:1.14
    name: nginx
    securityContext:
      capabilities:
        drop:
        - SETUID
