test/conformance/chainsaw/mutate/e2e/patchesjson6902-simple/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: foo-patchesjson6902-simple
  namespace: default
spec:
  terminationGracePeriodSeconds: 10
  containers:
  - command:
    - sleep infinity
    env:
    - name: FOO
      value: bar
    image: busybox:1.11
    name: busybox
    securityContext:
      capabilities:
        drop:
        - SETUID
  initContainers:
  - command:
    - sleep infinity
    image: nginx:1.14
    name: nginx
    securityContext:
      capabilities:
        drop:
        - SETUID
